Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
-    <title>Tonyzhou.GitHub.io by zhoushulin</title>
+    <title>Tonyzhou.GitHub.com by zhoushulin</title>
   </head>
 
   <body>
     <header>
       <div class="inner">
-        <h1>Tonyzhou.GitHub.io</h1>
+        <h1>Tonyzhou.GitHub.com</h1>
         <h2>周书林的blog</h2>
         <a href="https://github.com/zhoushulin/tonyzhou.github.com" class="button"><small>View project on</small> GitHub</a>
       </div>
